--- a/hr/templates/hr/hr_attendance_bonus_rule.html
+++ b/hr/templates/hr/hr_attendance_bonus_rule.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% block page_title %}Attendance Bonus Rule{% endblock %}
+{% block page_title %}Festival Bonus{% endblock %}
 
 
 {% block content %}
@@ -10,7 +10,7 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-md-6 align-self-center">
-                            <h4 class="mb-1">Attendance Bonus Rule List</h4>
+                            <h4 class="mb-1">Festival Bonus</h4>
                         </div>
                     </div>
                 </div>
@@ -22,9 +22,10 @@
                                     <th class="d-sm-table-cell">SL.</th>
                                     <th>Name</th>
                                     <th>Amount</th>
-                                    <th>Max Late</th>
-                                    <th>Max EO</th>
-                                    <th>Max Absent</th>
+                                    <th>Amount Percent</th> 
+                                    <th>Created at</th> 
+                                    <th>Created by</th> 
+                                    <th>Status</th> 
                                     <th class="d-sm-table-cell"></th>
                                 </tr>
                             </thead>
@@ -34,14 +35,20 @@
                                     <td class="">{{ forloop.counter }}</td>
                                     <td>{{ data.name }}</td>
                                     <td>{{ data.amount }}</td>
-                                    <td>{{ data.max_late }}</td>
-                                    <td>{{ data.max_early_out }}</td>
-                                    <td>{{ data.max_absent }}</td>
+                                    <td>{{ data.amount_percent }}</td>
+                                    <td>{{ data.created_at }}</td>
+                                    <td>{{ data.created_by }}</td>
+                                    <td>
+                                        <label class="mx-auto mb-0">
+                                            <input type="checkbox" data-id="{{data.id}}" data-type="status" {% if data.status.title|lower == "active" %}checked{% endif %} name="status" 
+                                                class="js-switch shift-update-switch" data-color="#009efb" data-size="mini" />
+                                        </label>
+                                    </td>
                                     <td class="text-left">
-                                        <a class="h4 m-r-10 text-success" href="{% url 'hr:hr_attendance_bonus_rule_update' data.id %}">
+                                        <a class="h4 m-r-10 text-success" href="{% url 'hr:bonus_setup_update' data.id %}">
                                             <span class="icon"><i class="ti-pencil-alt"></i></span>
                                         </a>
-                                        <a class="h4 text-danger delete_btn" href="javascript:void(0)" data-url="{% url 'hr:hr_attendance_bonus_rule_delete' data.id %}">
+                                        <a class="h4 text-danger delete_btn" href="javascript:void(0)" data-url="{% url 'hr:bonus_delete' data.id %}">
                                             <span class="icon"><i class="ti-trash"></i></span>
                                         </a>
                                     </td>
@@ -65,7 +72,7 @@
                             <div class="d-flex justify-content-end align-items-center">
                                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                     <div class="btn-group" role="group" aria-label="First group">
-                                        <a href="{% url 'hr:hr_attendance_bonus_rule_list' %}" class="btn btn-xs btn-success" title="Add New">
+                                        <a href="{% url 'hr:bonus_setup' %}" class="btn btn-xs btn-success" title="Add New">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
@@ -86,32 +93,19 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" data-title="Amount" id="amount" name="amount" value="{{ instance.amount }}" required>
+                                    <input type="text" class="form-control" data-title="Amount" id="amount" name="amount" value="{{ instance.amount }}">
                                     <span class="bar"></span>
                                     <label for="amount">Amount</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" data-title="Max. Late Allowed" id="max_late" name="max_late" value="{{ instance.max_late }}" required>
+                                    <input type="text" class="form-control" data-title="Amount Percentage" id="amount_percent" name="amount_percent" value="{{ instance.amount_percent }}">
                                     <span class="bar"></span>
-                                    <label for="max_late">Max. Late Allowed</label>
+                                    <label for="amount_percent">%Amount Percentage</label>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" data-title="Max. EO Allowed" id="max_early_out" name="max_early_out" value="{{ instance.max_early_out }}" required>
-                                    <span class="bar"></span>
-                                    <label for="max_early_out">Max. EO Allowed</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" data-title="Max. Absent" id="max_absent" name="max_absent" value="{{ instance.max_absent }}" required>
-                                    <span class="bar"></span>
-                                    <label for="max_absent">Max. Absent</label>
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="row">
                             <div class="col">
@@ -142,7 +136,7 @@
     $('body').on('click','.delete_btn', function(e){
         e.preventDefault();
         Swal.fire({
-            text                : 'Do you want to delete this Attendance Bonus Rule from list?',
+            text                : 'Do you want to delete this Festival Bonus from list?',
             type                : 'question',
             confirmButtonText   : 'Yes',
             confirmButtonColor  : "#00c292",
