--- a/ngoasset/templates/vehicle_mgt_base.html
+++ b/ngoasset/templates/vehicle_mgt_base.html
@@ -1,6 +1,6 @@
 {% extends "admin.html" %}
 {% load static %}
-{% block page_title %}Vehicle Management{% endblock %}
+{% block page_title %}Fixed Asset{% endblock %}
 {% block add_css %}
 <link href="{% static 'node_modules/sweetalert2/dist/sweetalert2.min.css' %}" rel="stylesheet">
 <link href="{% static 'node_modules/bootstrap-daterangepicker/daterangepicker.css' %}" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="card-header">
         <div class="row">
             <div class="col-md-6 align-self-center">
-                <h4 class="text-themecolor mb-0">Vehicle Management</h4>
+                <h4 class="text-themecolor mb-0">Fixed Asset</h4>
             </div>
         </div>
     </div>
