--- a/ngoasset/templates/vehicle_mgt/vehicle.html
+++ b/ngoasset/templates/vehicle_mgt/vehicle.html
@@ -50,7 +50,7 @@
                         <div class="d-flex justify-content-end align-items-center">
                             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                 <div class="btn-group" role="group" aria-label="First group">
-                                    <a href="{% url 'fa:vehicle_list' %}" class="btn btn-xs btn-success" title="Add New">
+                                    <a href="{% url 'fa:fixed_list' %}" class="btn btn-xs btn-success" title="Add New">
                                         <i class="ti-plus"></i>
                                     </a>
                                 </div>
