noyon : changes : signal added for calendar data entry as well as attendance report added

--- a/hr/templates/hr/attendance/daily-report.html
+++ b/hr/templates/hr/attendance/daily-report.html
@@ -39,7 +39,7 @@
                 <div class="col-md">
                     <div class="form-group">
                         <select class="form-control text-capitalize select2" name="company" id="company"
-                            data-title="Company">
+                            data-title="Branch">
                             <option value="" disabled selected></option>
                             {% for data in company_list %}
                             <option value="{{data.id}}">{{data.short_name}}</option>
