--- a/hr/templates/hr/holiday/base.html
+++ b/hr/templates/hr/holiday/base.html
@@ -120,7 +120,7 @@
         {% comment %} Delete {% endcomment %}
 
         // Handle multiple selection for company field
-        $("body").on("change", "#company", function(){
+        $("body").on("select2:select", "#company", function(){
             var selectedCompanies = $(this).val();
             console.log('company::: ', selectedCompanies)
             if (selectedCompanies && selectedCompanies.length > 0) {
