--- a/general/templates/user/form.html
+++ b/general/templates/user/form.html
@@ -52,7 +52,7 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label for="company">Branch</label>
-                <select class="form-control text-capitalize select2" id="company" name="company" data-title="Brnach" required>
+                <select class="form-control text-capitalize select2" id="company" name="company" data-title="Branch" required>
                   <option value="" disabled selected></option>
                   {% for data in company_list %}
                   <option value="{{data.id}}" {% if user.branch_id == data.id %} selected {% endif %}>{{data.name}}</option>
@@ -126,17 +126,17 @@
                 </select>
               </div>
             </div>
-            <div class="col-md-2">
-              <div class="form-group">
-                <label class="form-label">Helpdesk Role</label>
-                <select class="form-control text-capitalize custom-select select2" name="helpdesk_role" required>
-                  <option value="1" {% if user.helpdesk_role == 1 %} selected {% endif %}> Issuer</option>
-                  <option value="2" {% if user.helpdesk_role == 2 %} selected {% endif %}> Resolver</option>
-                  <option value="3" {% if user.helpdesk_role == 3 %} selected {% endif %}> Manager</option>
-                  <option value="4" {% if user.helpdesk_role == 4 %} selected {% endif %}> Department Head</option>
-                </select>
-              </div>
-            </div>
+            {% comment %} <div class="col-md-2">
+                <div class="form-group">
+                    <label class="form-label">Helpdesk Role</label>
+                    <select class="form-control text-capitalize custom-select select2" name="helpdesk_role" required>
+                    <option value="1" {% if user.helpdesk_role == 1 %} selected {% endif %}> Issuer</option>
+                    <option value="2" {% if user.helpdesk_role == 2 %} selected {% endif %}> Resolver</option>
+                    <option value="3" {% if user.helpdesk_role == 3 %} selected {% endif %}> Manager</option>
+                    <option value="4" {% if user.helpdesk_role == 4 %} selected {% endif %}> Department Head</option>
+                    </select>
+                </div>
+            </div> {% endcomment %}
             <div class="col-md-2 mb-5">
               <label class="mt-2">
                 <input type="checkbox" {% if user.is_department_head %} checked {% endif %} name="is_department_head" class="js-switch" data-color="#009efb" data-size="mini" />
