noyon : issue : salary pay slip issue, branch crud added

--- a/hr/templates/hr/salary/pay_slip.html
+++ b/hr/templates/hr/salary/pay_slip.html
@@ -126,7 +126,7 @@
             <thead>
               <tr class="text-center">
                   <th class="">Employee ID</th>
-                  <th class="">Company</th>
+                  <th class="">Branch</th>
                   <th class="">Department</th>
                   <th class="">Designation</th>
                   <th class="">Staff Category</th>
