--- a/general/templates/company.html
+++ b/general/templates/company.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% load static %}
 
-{% block page_title %} Company Information {% endblock %}
+{% block page_title %} Branch Information {% endblock %}
 {% block add_css %} 
 
 {% endblock %}
@@ -14,14 +14,14 @@
             <div class="card-header">
                 <div class="row">
                 <div class="col-md-6 align-self-center">
-                    <h4 class="text-themecolor mb-0"> {{ action.name }} Company Information</h4>
+                    <h4 class="text-themecolor mb-0"> {{ action.name }} Branch Information</h4>
                 </div>
                 <div class="col-md-6 align-self-center text-right">
                     <div class="d-flex justify-content-end align-items-center">
                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                         <div class="btn-group" role="group" aria-label="First group">
-                            {% if tab_name == "Update Company" %}
-                            <a href="/user/company/" class="btn btn-sm btn-success" title="Forwarding Letter"><i class="ti-plus"></i></a>
+                            {% if tab_name == "Update Branch" %}
+                            <a href="/user/branch/" class="btn btn-sm btn-success" title="Forwarding Letter"><i class="ti-plus"></i></a>
                             {% endif %}
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                 <ul class="nav nav-tabs" role="tablist"> 
                     
                     <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#add_company" role="tab">{{tab_name}}</a>
+                        <a class="nav-link active" data-toggle="tab" href="#add_branch" role="tab">{{tab_name}}</a>
                     </li>  
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#list" role="tab">List</a>
@@ -43,6 +43,7 @@
                 <div class="tab-content tabcontent-border">
                     <div class="tab-pane p-20 active" id="add_company" role="tabpanel">
                         <form class="floating-labels mt-3" method="post"> {% csrf_token %}
+                            <input type="hidden" value="{{request.session.company_id}}" name="company">
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
@@ -92,16 +93,16 @@
                                 
                                 <div class="col-md-3">
                                     <div class="form-group">
-                                        <label class="form-label">CEO</label>
-                                        <select class="form-control text-capitalize select2" name="ceo" data-title="CEO" required>
+                                        <label class="form-label">Branch Head</label>
+                                        <select class="form-control text-capitalize select2" name="branch_head" data-title="Branch" required>
                                         <option value="" disabled selected></option>
                                         {% for data in user_list %}
-                                        <option value="{{data.id}}" {% if instance.ceo_id == data.id %} selected {% endif %}>{{data.name}}({{data.employee_id}})</option>
+                                        <option value="{{data.id}}" {% if instance.branch_head_id == data.id %} selected {% endif %}>{{data.name}}({{data.employee_id}})</option>
                                         {% endfor %}
                                         </select>
                                     </div>
                                 </div> 
-
+                                {% comment %}
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label class="form-label">MD</label>
@@ -112,6 +113,13 @@
                                         {% endfor %}
                                         </select>
                                     </div>
+                                </div>
+                                {% endcomment %}
+                                <div class="col-md-3">
+                                    <label class="mt-2">
+                                        <input type="checkbox" {% if instance.status == 1 %} checked {% endif %} name="status" class="js-switch" data-color="#009efb" data-size="mini" />
+                                        Status
+                                    </label>
                                 </div>
                             </div>
 
@@ -146,7 +154,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            {% comment %}
                             <p class="subtitle"><span>Bank Details</span></p>
                             <!-- Bank 1 -->
                             <div class="row">
@@ -215,7 +223,7 @@
                                     </div>
                                 </div>
                             </div>
-
+                            
                             <!-- Bank 3 -->
                             <div class="row">
                                 <div class="col-md-3">
@@ -317,13 +325,8 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-md-3 mb-5">
-                                <label class="mt-2">
-                                    <input type="checkbox" {% if instance.status == 1 %} checked {% endif %} name="status" class="js-switch" data-color="#009efb" data-size="mini" />
-                                    Status
-                                </label>
-                            </div>
+                            {% endcomment %}
+                            
 
                             <div class="row">
                                 <div class="col-md-3 ml-auto mt-2">
@@ -348,8 +351,10 @@
                                         <th class="d-md-table-cell">Short Name</th>
                                         <th class="d-md-table-cell">Phone</th>
                                         <th class="d-md-table-cell">Address</th>
-                                        <th class="d-md-table-cell">CEO</th>
+                                        <th class="d-md-table-cell">Branch Head</th>
+                                        {% comment %}
                                         <th class="d-md-table-cell">MD</th> 
+                                        {% endcomment %}
                                         <th class="d-md-table-cell">Status</th> 
                                         <th class="d-md-table-cell"></th> 
                                     </tr>
@@ -362,17 +367,19 @@
                                             <td style="width:10%">{% if data.short_name %}{{ data.short_name}} {% endif %}</td>
                                             <td style="width:10%">{% if data.phone_no %} {{ data.phone_no}} {% endif %} </td>
                                             <td style="width:20%">{{ data.address }}</td>
-                                            <td style="width:20%">{{ data.ceo }}</td>
+                                            <td style="width:20%">{{ data.branch_head }}</td>
+                                            {% comment %}
                                             <td style="width:10%">{% if data.md %}{{ data.md }}{% endif %}</td>
+                                            {% endcomment %}
                                             <td>
                                                 <a href="#" class="h4 text-danger"><input type="checkbox" {% if data.status == 1 %} checked {% endif %} name="status" class="js-switch user-update-switch" data-color="#009efb" data-size="mini" disabled></a>
                                             </td>
                                             <td class="text-left" style="width:10%">
-                                                <a href="/user/company/{{data.id}}/edit/" class="h4 m-r-10 text-success">
+                                                <a href="/user/branch/{{data.id}}/edit/" class="h4 m-r-10 text-success">
                                                     <span class="icon"><i class="ti-pencil-alt" title="Update"></i></span>
                                                 </a>
                                                 <a href="#" onclick="deleteCompany('{{data.id}}')" class="h4 text-danger">
-                                                    <span class="icon"><i class="ti-trash" title="Delete Company"></i></span>
+                                                    <span class="icon"><i class="ti-trash" title="Delete Branch"></i></span>
                                                 </a>
                                             </td>
                                         </tr>
@@ -406,7 +413,7 @@
           reverseButtons: true
       }).then((result) => {
           if (result.value) { 
-            var id_url = "/user/company/"+id.toString()+"/delete/";
+            var id_url = "/user/branch/"+id.toString()+"/delete/";
             $.ajax({
                 url: id_url,
                 type: 'POST',
@@ -419,7 +426,7 @@
                     $("#"+id.toString()).remove();
                     Swal.fire({
                         type: 'success',
-                        title: 'Company Deleted',
+                        title: 'Branch Deleted',
                         text: data,
                     });
                 },
