--- a/hr/templates/hr/salary/process_view.html
+++ b/hr/templates/hr/salary/process_view.html
@@ -87,7 +87,7 @@
                             <tr class="text-center">
                                 <th class="sticky-col name-col">Employee ID</th>
                                 <th class="sticky-col first-col">Name</th>
-                                <th class="">Company</th>
+                                <th class="">Branch</th>
                                 <th class="">Department</th>
                                 <th class="">Designation</th>
                                 {% comment %} <th class="">Cost Center</th>
