--- a/general/templates/user/user_access_control_setup.html
+++ b/general/templates/user/user_access_control_setup.html
@@ -41,12 +41,12 @@
         <div class="row floating-labels mt-3">
             <div class="col-md">
                 <div class="form-group">
-                    <label for="company">Company</label>
+                    <label for="company">Branch</label>
                     <select class="form-control text-capitalize select2" name="company" id="company"
-                        data-title="Company">
+                        data-title="Branch">
                         <option value="" disabled selected></option>
                         {% for data in company_list %}
-                        <option value="{{data.id}}">{{data.short_name}}</option>
+                        <option value="{{data.id}}">{{data.name}}</option>
                         {% endfor %}
                     </select>
                 </div>
