--- a/hr/templates/hr/employee/form.html
+++ b/hr/templates/hr/employee/form.html
@@ -762,11 +762,11 @@
                                 <div class="row">
                                     <div class="col-md">
                                         <div class="form-group">
-                                            <label for="company">Company</label>
-                                            <select class="form-control  custom-select select2" id="company" name="company" data-title="Company" placeholder="gender" required>
+                                            <label for="company">Branch</label>
+                                            <select class="form-control  custom-select select2" id="company" name="company" data-title="Branch" placeholder="Branch" required>
                                                 <option value="" disabled selected></option>
                                                 {% for i in company_list %}
-                                                <option value="{{i.id}}">{{i.short_name}}</option>
+                                                <option value="{{i.id}}">{{i.name}}</option>
                                                 {% endfor %}
                                             </select>
                                         </div>
@@ -796,7 +796,7 @@
                                     <div class="col-md">
                                         <div class="form-group">
                                             <label for="section">Section</label>
-                                            <select class="form-control custom-select select2" id="section" name="section" data-title="Section" required>
+                                            <select class="form-control custom-select select2" id="section" name="section" data-title="Section">
                                                 <option value="" disabled selected></option>
                                             </select>
                                         </div>
@@ -814,6 +814,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                {% comment %}
                                 <div class="row">
                                     <div class="col-md">
                                         <div class="form-group">
@@ -860,6 +861,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                {% endcomment %}
                                 <div class="row">
                                     <div class="col-md">
                                         <div class="form-group">
